# jupyterlab-day

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyterlab_day/: __init__.py
src/: index.ts
style/: variables.css
